[project]
name = "web_browser"
version = "0.0.1"
description = "Web Browser"
authors = [
    {name = "Karan Kalra"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "ruff (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
